Added product razor

--- a/queue/Pages/Products.razor
+++ b/queue/Pages/Products.razor
@@ -1,8 +1,21 @@
 @page "/Products"
 @using queue.Entities
-
-<RadzenDataGrid AllowFiltering="true" AllowColumnResize="true" AllowAlternatingRows="false" FilterMode="FilterMode.Advanced" AllowSorting="true" PageSize="5" AllowPaging="true" PagerHorizontalAlign="HorizontalAlign.Left" ShowPagingSummary="true"
-                Data="@AllProducts" ColumnWidth="300px" LogicalFilterOperator="LogicalFilterOperator.Or" SelectionMode="DataGridSelectionMode.Single">
+<div style="text-align: right; margin-bottom: 10px; border-radius: 50px;">
+    <RadzenButton Icon="add_box" Text="Add" Click="Add"></RadzenButton>
+</div>
+<RadzenDataGrid 
+                Data="@AllProducts"
+                AllowFiltering="true" 
+                AllowColumnResize="true" 
+                AllowAlternatingRows="false" 
+                FilterMode="FilterMode.Advanced" 
+                AllowSorting="true" PageSize="5" 
+                AllowPaging="true" 
+                PagerHorizontalAlign="HorizontalAlign.Left" 
+                ShowPagingSummary="true"
+                ColumnWidth="300px" 
+                LogicalFilterOperator="LogicalFilterOperator.Or" 
+                SelectionMode="DataGridSelectionMode.Single">
     <Columns>
         <RadzenDataGridColumn Property="@nameof(Product.Id)" Filterable="false" Title="ID" Frozen="true" Width="80px" TextAlign="TextAlign.Center" />
         <RadzenDataGridColumn Property="@nameof(Product.Name)" Title="Name" Frozen="true" Width="160px" />
